<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndActivity">

    <!-- Barre de l'application -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green"
            android:elevation="4dp"
            app:title="@string/end_game" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- View qui permet de scroll -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Le classement dans un tableau -->
        <TableLayout
            android:id="@+id/tb_leaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <!-- Ligne du tableau -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Colonne du tableau -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/position"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- Colonne du tableau -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- Colonne du tableau -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/score"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>